# Style-Bert-VITS2

./: .gitignore  README.md  pyproject.toml
dev_tools/: benchmark_onnx.py  benchmark_quantization.py  export_onnx.py
style_bert_vits2/: __init__.py  constants.py  tts_model.py
style_bert_vits2/api/: audio_result.py  resources.py  speaker.py  tts.py
style_bert_vits2/models/: infer.py  infer_onnx.py
style_bert_vits2/nlp/: __init__.py  bert_models.py
style_bert_vits2/nlp/english/: bert_feature.py
style_bert_vits2/nlp/japanese/: bert_feature.py  g2p.py  normalizer.py
text/: cmudict.rep
