[project]
name = "style-bert-vits2"
version = "0.1.0"
description = "Style-Bert-VITS2 inference library — JP-Extra TTS with simple API"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0"
authors = [
    { name = "LemonDouble" },
]

dependencies = [
    # Core
    "torch>=2.1",
    "safetensors",
    "transformers",
    "huggingface-hub",
    "numpy<2",
    "pydantic>=2.0",
    "loguru",
    # NLP - Japanese
    "pyopenjtalk-dict",
    "pyworld-prebuilt",
    "num2words",
    "numba",
    "accelerate",
]

[project.urls]
Source = "https://github.com/LemonDouble/Style-Bert-VITS2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["style_bert_vits2"]

[tool.hatch.build.targets.sdist]
only-include = [
    "dict_data/default.csv",
    "style_bert_vits2",
    "LGPL_LICENSE",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
